-Renamed settings: "playing_speed" to "playback_speed", "recording_sync" to "recording_synchronization", "play_block_actions" to "block_actions_playback", "set_block_states" to "block_initialization".
-Changed settings, command names and command arguments naming convention from lower camel case to snake case.
-Item types and block states are now stored using string IDs (instead of numeric IDs), providing better compatibility between different Minecraft versions and modpacks.
-Scene format is now JSON-based.
-Improvements to recording format.
-Improvements to recording information command output.
-Improvements to error messages.
-Improved output of trying to change setting value with "/mocap settings" command, when value remained unchanged.
-Removed argument value limits that existed for some settings in "/mocap settings" command.
-Output of "/mocap recordings list" and "/mocap scenes list" is now alphabetically sorted.
-Changed some "errors" to "failures" and some "failures" to "errors" - it should be now easier to distinguish user errors (failures) from mod errors.
-Fixed recording being in a glitched state after restarting the integrated server (leaving and rejoining world in a singleplayer mode).
-Fixed issues with loading mocap_files directory when using Flashback (thanks to hablethedev for reporting).
-Fixed some interactions with blocks (e.g. placing candles) not working on version 1.20.5 and later.
-Fixed setting values not being applied or using values from previous world when obtained without first starting playback or interacting with "/mocap settings" command.
-Fixed fake players not being fully removed from the client when playback ended with death.
-Fixed fake players in "player as entity" mode not being able to interact with blocks (thanks to awesome_nobel46 for reporting).
-Fixed vehicles not appearing in the playback after disabling "playItemEntities", "playOtherEntities" and "playBlockActions", despite "playVehicleEntities" being enabled.