@@ -29,17 +29,22 @@ public class CommandUtils
 		return Commands.argument("player_name", StringArgumentType.string()).executes(command);
 	}
 
-	public static ArgumentBuilder<CommandSourceStack, ?> playerArguments(Command<CommandSourceStack> command)
+	public static ArgumentBuilder<CommandSourceStack, ?> playerArguments(CommandBuildContext buildContext,
+																		 Command<CommandSourceStack> command)
 	{
-		return withSkinArguments(playerNameArgument(command), command);
+		return withModelArguments(buildContext, playerNameArgument(command), command);
 	}
 
-	public static ArgumentBuilder<CommandSourceStack, ?> withSkinArguments(ArgumentBuilder<CommandSourceStack, ?> builder,
-																		   Command<CommandSourceStack> command)
+	public static ArgumentBuilder<CommandSourceStack, ?> withModelArguments(CommandBuildContext buildContext,
+																			ArgumentBuilder<CommandSourceStack, ?> builder,
+																			Command<CommandSourceStack> command)
 	{
-		builder.then(Commands.literal("from_player").then(Commands.argument("skin_player_name", StringArgumentType.greedyString()).executes(command)));
-		builder.then(Commands.literal("from_file").then(Commands.argument("skin_filename", StringArgumentType.greedyString()).executes(command)));
-		builder.then(Commands.literal("from_mineskin").then(Commands.argument("mineskin_url", StringArgumentType.greedyString()).executes(command)));
+		builder.then(Commands.literal("skin_from_player").then(Commands.argument("skin_player_name", StringArgumentType.greedyString()).executes(command)));
+		builder.then(Commands.literal("skin_from_file").then(Commands.argument("skin_filename", StringArgumentType.greedyString()).executes(command)));
+		builder.then(Commands.literal("skin_from_mineskin").then(Commands.argument("mineskin_url", StringArgumentType.greedyString()).executes(command)));
+		builder.then(Commands.literal("player_as_entity").
+				then(Commands.argument("entity", ResourceArgument.resource(buildContext, Registries.ENTITY_TYPE)).executes(command).
+				then(Commands.argument("nbt", NbtTagArgument.nbtTag()).executes(command))));
 		return builder;
 	}
 
@@ -53,7 +58,7 @@ public class CommandUtils
 			then(Commands.argument("offset_y", DoubleArgumentType.doubleArg()).
 			then(Commands.argument("offset_z", DoubleArgumentType.doubleArg()).executes(command)))));
 		builder.then(Commands.literal("player_name").then(playerNameArgument(command)));
-		builder.then(withSkinArguments(Commands.literal("player_skin"), command));
+		builder.then(withModelArguments(buildContext, Commands.literal("player_skin"), command));
 		builder.then(Commands.literal("player_as_entity").
 			then(Commands.literal("disabled").executes(command)).
 			then(Commands.literal("enabled").
