@@ -8,10 +8,16 @@ import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mt1006.mocap.command.CommandUtils;
+import com.mt1006.mocap.mocap.playing.modifiers.PlaybackModifiers;
+import com.mt1006.mocap.mocap.playing.modifiers.PlayerAsEntity;
 import com.mt1006.mocap.mocap.playing.modifiers.PlayerSkin;
 import com.mt1006.mocap.utils.Utils;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.arguments.GameProfileArgument;
+import net.minecraft.commands.arguments.NbtTagArgument;
+import net.minecraft.commands.arguments.ResourceArgument;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.server.MinecraftServer;
@@ -133,11 +139,6 @@ public class CommandInfo implements CommandOutput
 		catch (Exception e) { return null; }
 	}
 
-	public @Nullable String getPlayerName()
-	{
-		return getNullableString("player_name");
-	}
-
 	public PlayerSkin getPlayerSkin()
 	{
 		String fromPlayer = getNullableString("skin_player_name");
@@ -150,5 +151,33 @@ public class CommandInfo implements CommandOutput
 		if (fromMineskin != null) { return new PlayerSkin(PlayerSkin.SkinSource.FROM_MINESKIN, fromMineskin); }
 
 		return PlayerSkin.DEFAULT;
+	}
+
+	public @Nullable PlaybackModifiers getSimpleModifiers(CommandOutput commandOutput)
+	{
+		String playerName = getNullableString("player_name");
+		if (!PlaybackModifiers.checkIfProperName(commandOutput, playerName)) { return null; }
+
+		PlayerSkin playerSkin = getPlayerSkin();
+		PlayerAsEntity playerAsEntity = PlayerAsEntity.DISABLED;
+
+		try
+		{
+			String playerAsEntityId = ResourceArgument.getEntityType(ctx, "entity").key().location().toString();
+
+			Tag tag;
+			try { tag = NbtTagArgument.getNbtTag(ctx, "nbt"); }
+			catch (Exception e) { tag = null; }
+			CompoundTag nbt = (tag instanceof CompoundTag) ? (CompoundTag)tag : null;
+
+			playerAsEntity = new PlayerAsEntity(playerAsEntityId, nbt != null ? nbt.toString() : null);
+		}
+		catch (Exception ignore) {}
+
+		PlaybackModifiers modifiers = PlaybackModifiers.empty();
+		modifiers.playerName = playerName;
+		modifiers.playerSkin = playerSkin;
+		modifiers.playerAsEntity = playerAsEntity;
+		return modifiers;
 	}
 }
