@@ -3,11 +3,11 @@
 	"minVersion": "0.8",
 	"package": "com.mt1006.mocap.mixin",
 	"compatibilityLevel": "JAVA_21",
-	"mixins":
-	[
+	"mixins": [
 		"EntityMixin",
 		"LivingEntityMethodMixin",
 		"ServerLevelMixin",
+		"TestMixin",
 		"fields.AbstractHorseMixin",
 		"fields.BoatMixin",
 		"fields.EntityIdMixin",
@@ -16,8 +16,7 @@
 		"fields.LevelMixin",
 		"fields.LivingEntityMixin",
 		"fields.PigMixin",
-		"fields.PlayerMixin",
-		"TestMixin"
+		"fields.PlayerMixin"
 	],
 	"client":
 	[
